--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "nodejs": "^0.0.0"
+    "node": "^16.6.1",
+    "nodejs": "^0.0.0",
+    "serve": "^12.0.0"
   }
 }
