make it better:

--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "engines": {
     "node": "16.2.0"
   },
+
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "cd server && npm start",
@@ -15,14 +16,13 @@
     "heroku-postbuild": "cd client && npm run build"
   },
   "keywords": [],
-  "author": "Alex Riley",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.11.0",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
-    "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
     "react": "^17.0.2",
