--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "cd server && npm start",
+    "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build"
+    "heroku-postbuild": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,9 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.9",
+    "apollo-link-context": "^1.0.20",
+    "graphql-tag": "^2.12.5",
     "node": "^16.6.1",
     "nodejs": "^0.0.0",
     "serve": "^12.0.0"
