--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "node": "16.2.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon --exec babel-node src/server.js",
     "watch": "nodemon",
     "seed": "node config/seeds.js"
   },
