--- a/package.json
+++ b/package.json
@@ -14,24 +14,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "if-env": "^1.0.4"
+  },
   "devDependencies": {
     "concurrently": "^5.1.0"
-  },
-  "dependencies": {
-    "apollo-boost": "^0.4.9",
-    "apollo-link-context": "^1.0.20",
-    "dotenv": "^10.0.0",
-    "graphql-tag": "^2.12.5",
-    "node": "^16.6.1",
-    "nodejs": "^0.0.0",
-    "serve": "^12.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rileyale001/22-redux-store.git"
-  },
-  "bugs": {
-    "url": "https://github.com/rileyale001/22-redux-store/issues"
-  },
-  "homepage": "https://github.com/rileyale001/22-redux-store#readme"
+  }
 }
