--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "Work with a partner to add comments describing the functionality of the code found in [24-Stu_Stripe/Unsolved/client/src/components/Cart/index.js](24-Stu_Stripe/Unsolved/client/src/components/Cart/index.js).",
   "main": "server/server.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "cd server && npm start",
-    "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
-    "heroku-postbuild": "cd client && npm run build"
+    "build": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
